[tool.poetry]
name = "openreview"
version = "0.1.0"
description = ""
authors = ["gao wenhan <gaowenhan13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openreview-py = "^1.41.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pandas = "^2.2.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
